# parsan

./: .gitignore  LICENSE  README.md  pyproject.toml
data/ood/: README.md  ood_all.conllu  ood_all.txt  ood_allrights.conllu  ood_allrights.txt  ood_bagatz.conllu  ood_bagatz.txt  ood_davar.conllu  ood_davar.txt  ood_geektime.conllu  ood_geektime.txt  ood_israelhayom.conllu  ood_israelhayom.txt
experiments/: README.md  ood_eval.slurm  train_joint.slurm  train_segmenter.slurm
parsan/: __init__.py  config.py  data.py  decode.py  lemma_bank.py  model.py  normalize.py  pipeline.py  score.py  text.py
parsan/segment/: __init__.py  char_seg.py  rftok.py
scripts/: _bootstrap.py  build_lemma_bank.py  build_seg_data.py  evaluate.py  normalize.py  predict.py  train_joint.py  train_segmenter.py
